# EGL-cpp

./: .clang-format  CMakeLists.txt  Doxyfile  README
src/: CMakeLists.txt
src/cxx/: config.cxx  context.cxx  debug.cxx  display.cxx  image.cxx  misc.cxx  surface.cxx
src/cxx/egl/: context.cxx  display.cxx  glad.cxx
src/ixx/: config.ixx  context.ixx  debug.ixx  display.ixx  egl.ixx  enums.ixx  image.ixx  mapas.ixx  misc.ixx  surface.ixx  sync.ixx
src/ixx/egl/: config.ixx  context.ixx  debug.ixx  display.ixx  enums.ixx  glad.ixx  mapas.ixx  surface.ixx  sync.ixx  utils.ixx
tests/: CMakeLists.txt  prueba.cpp
